...
    <string name="bonAppetit">Bon Appetit!</string>
    <string name="by">by </string>
    <string name="categoryHint">Italian, French, Dessert, Lunch, Quick, &#8230;</string>
    <string name="chooseUsername">Create a new username:\n*must be between 4 to 20 characters</string>
    <string name="clearPurchased">Clear Purchased</string>
    <string name="contentDescriptionRecipe">A picture of the recipe</string>
    <string name="continueAsGuest"><u>Skip</u></string>
    <string name="contactus"><u>Contact Us:</u></string>
    <string name="webtext"><u>Please provide our feedback to our survey: https://chef-ly.typeform.com/to/LKXdL8</u></string>
    <string name="emailtext"><u>To report an issue or communicate with as, please send an email to: chef.ly.app@gmail.com</u></string>
    <string name="continueWithSocial">Continue with social</string>
    <string name="createPassword">Create a new Password:\n * Must have 8 characters in length\n *At least one digit,symbol,Lower/Upper case letter\n</string>
    <string name="createPasswordAgain">Please Re-enter password for match confirmation</string>
    <string name="createRecipe">Create Recipe</string>
    <string name="difficulty">Difficulty: </string>
    <string name="directions">Directions</string>
    <string name="done">Done</string>
    <string name="dot">&#8226;</string>
    <string name="edit">Edit</string>
    <string name="edit_directionView">edit direction step</string>
...
    <string name="ingredient">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="introImageDescription">Animated GIF showing app usage</string>
    <string name="level">Difficulty</string>
    <string name="minutes">Minutes</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="noFavorites">No Favorites</string>

    <string name="findrecipes">Find Recipes</string>
    <string name="searchingredients">Search a recipe based on the ingredients you have. Enter Ingredients separated by comma</string>
    <string name="search_hint">fish,rice,vegetables</string>

    <string name="of">of</string>
    <string name="one">1.0</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="prev">Prev</string>
    <string name="qty">Qty</string>
    <string name="rating">Rating: </string>
    <string name="recipe_list_activity">RecipeListActivity</string>
    <string name="recipeCategories">Categories</string>
    <string name="recipeDescription">Description</string>
    <string name="recipeImage">Image</string>
    <string name="recipeImageContentDescription">Image of recipe</string>
    <string name="recipeName">Recipe Title</string>
    <string name="recipeNotFound">Recipe Not Found :(</string>
    <string name="recipes">Recipes</string>
    <string name="recipeServings">Serves</string>
    <string name="recipeTime">Cook and Prep Time</string>
    <string name="registerPageTitle">Register</string>
    <string name="repeat">Repeat</string>
    <string name="search">Search</string>
    <string name="searchHint">Search&#8230;</string>
    <string name="shoppingList">Shopping List</string>
    <string name="signIn">Login</string>
    <string name="signUp"><u>Join for free</u></string>
    <string name="skip">Skip</string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="step">Step</string>
    <string name="time">Time</string>
    <string name="unit">Unit</string>
    <string name="unknown">Unk</string>
    <string name="updateEmailPassword">Update Username &#0038; Password</string>
    <string name="user">Lewis Puller</string>
    <string name="userImage">User Image</string>
...
