<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/thirdFrag"
    tools:context="com.se491.chef_ly.activity.create_recipe_fragments.ThirdFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fragTitle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/root"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/qty"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/unit"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/ingredient"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/ingredientQty"
                        android:inputType="numberDecimal"
                        android:hint="@string/one"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <AutoCompleteTextView
                        android:id="@+id/ingredientUom"

                        android:inputType="text"
                        android:hint="@string/unit"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/ingredientName"
                        android:inputType="text"
                        android:hint="@string/ingredient"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttons"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/newLineBtn"
                        android:text="@string/plus"
                        android:padding="3dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#236701"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/removeLineBtn"
                        android:text="@string/minus"
                        android:padding="3dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#670401"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>




    </LinearLayout>

</FrameLayout>
